--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 /* --- RESET --- */
-* {
+*,
+*::after,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;   
+  /* font-family: Poiret One; */
+  letter-spacing: 1px;
 }
 html {
   font-family: 'Nunito Sans', sans-serif;
 }
-
 body{
-    margin: 0;
+  background-color: #F7F7F7;
+  margin: 0;
+  min-width: 100vw;
+  overflow-x: hidden;
 }
-
 h1, h2, h3, h4, p, ul {
   margin-top: 0;
   margin-bottom: 0;
@@ -31,4 +38,26 @@ select {
 }
 img {
   width: 100%;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0px #aaa; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #aaa; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a9a6a6; 
 }
