--- a/src/components/Home/styles/HomeProducts.css
+++ b/src/components/Home/styles/HomeProducts.css
@@ -2,11 +2,11 @@
   /* background-color: red; */
   margin-top: 100px;
   text-align: center;
-  min-height: 100%;
+  /* min-height: 100%; */
  }
 
 .home__input {
-  min-width: 500px;
+  min-width: 300px;
   height: 50px;
 }
 
